Added option for scheduling on nearest weekday. improved development page to play with the flags.

--- a/projects/cron-editor/src/lib/cron-editor.component.css
+++ b/projects/cron-editor/src/lib/cron-editor.component.css
@@ -56,6 +56,10 @@
     width: 70px;
 }
 
+.cron-editor-container .advanced-cron-editor-label {
+    font-weight: 200;
+}
+
 .nav-tabs li a {
     cursor: pointer;
 }
