--- a/projects/cron-editor/src/lib/cron-editor.component.css
+++ b/projects/cron-editor/src/lib/cron-editor.component.css
@@ -40,6 +40,10 @@
     width: 60px;
 }
 
+.cron-editor-container .months-medium {
+    width: 80px;
+}
+
 .cron-editor-container .day-order-in-month {
     width: 95px;
 }
