Added option for scheduling on nearest weekday & starting month for monthly tab. (#16)
* Add option for scheduling on nearest weekday.

* Improve development page to play with the flags.

* Add starting month for monthly tab.

--- a/projects/cron-editor/src/lib/cron-editor.component.css
+++ b/projects/cron-editor/src/lib/cron-editor.component.css
@@ -40,6 +40,10 @@
     width: 60px;
 }
 
+.cron-editor-container .months-medium {
+    width: 80px;
+}
+
 .cron-editor-container .day-order-in-month {
     width: 95px;
 }
@@ -54,6 +58,10 @@
 
 .cron-editor-container .hour-types {
     width: 70px;
+}
+
+.cron-editor-container .advanced-cron-editor-label {
+    font-weight: 200;
 }
 
 .nav-tabs li a {
