fix disabled for Monthly Tab

--- a/projects/cron-editor/src/lib/cron-editor.component.html
+++ b/projects/cron-editor/src/lib/cron-editor.component.html
@@ -191,8 +191,8 @@
                             (change)="regenerateCron()" [(time)]="state.monthly.specificDay" [selectClass]="options.formSelectClass"
                             [use24HourTime]="options.use24HourTime" [hideSeconds]="options.hideSeconds">
                         </cron-time-picker>&nbsp;
-                        <label class="advanced-cron-editor-label"><input type="checkbox" (change)="regenerateCron()"
-                        [(ngModel)]="state.monthly.runOnWeekday" [ngClass]="options.formCheckboxClass"> during the nearest weekday</label>
+                        <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'monthly' || state.monthly.subTab !== 'specificDay'" 
+                            (change)="regenerateCron()" [(ngModel)]="state.monthly.runOnWeekday" [ngClass]="options.formCheckboxClass"> during the nearest weekday</label>
                     </div>
                     <div class="well well-small">
                         <input type="radio" name="monthly-radio" value="specificWeekDay" [disabled]="disabled" (change)="regenerateCron()"
