--- a/projects/cron-editor/src/lib/cron-editor.component.html
+++ b/projects/cron-editor/src/lib/cron-editor.component.html
@@ -8,37 +8,37 @@
 
     <li role="presentation" *ngIf="!options.hideHourlyTab" [ngClass]="{'active': activeTab === 'hourly'}">
         <a aria-controls="hourly" role="tab" data-toggle="tab" (click)="setActiveTab('hourly')">
-            Hourly
+            Heure
         </a>
     </li>
 
     <li role="presentation" *ngIf="!options.hideDailyTab" [ngClass]="{'active': activeTab === 'daily'}">
         <a aria-controls="daily" role="tab" data-toggle="tab" (click)="setActiveTab('daily')">
-            Daily
+            Jour
         </a>
     </li>
 
     <li role="presentation" *ngIf="!options.hideWeeklyTab" [ngClass]="{'active': activeTab === 'weekly'}">
         <a aria-controls="weekly" role="tab" data-toggle="tab" (click)="setActiveTab('weekly')">
-            Weekly
+            hebdomadaire
         </a>
     </li>
 
     <li role="presentation" *ngIf="!options.hideMonthlyTab" [ngClass]="{'active': activeTab === 'monthly'}">
         <a aria-controls="monthly" role="tab" data-toggle="tab" (click)="setActiveTab('monthly')">
-            Monthly
+            Mensuelle
         </a>
     </li>
 
     <li role="presentation" *ngIf="!options.hideYearlyTab" [ngClass]="{'active': activeTab === 'yearly'}">
         <a aria-controls="yearly" role="tab" data-toggle="tab" (click)="setActiveTab('yearly')">
-            Yearly
+            Année
         </a>
     </li>
 
     <li role="presentation" *ngIf="!options.hideAdvancedTab" [ngClass]="{'active': activeTab === 'advanced'}">
         <a aria-controls="advanced" role="tab" data-toggle="tab" (click)="setActiveTab('advanced')">
-            Advanced
+            Avancé
         </a>
     </li>
 </ul>
@@ -130,31 +130,31 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.MON" [ngClass]="options.formCheckboxClass"> Monday</label>
+                                    [(ngModel)]="state.weekly.MON" [ngClass]="options.formCheckboxClass"> Lundi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.TUE" [ngClass]="options.formCheckboxClass"> Tuesday</label>
+                                    [(ngModel)]="state.weekly.TUE" [ngClass]="options.formCheckboxClass"> Mardi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.WED" [ngClass]="options.formCheckboxClass"> Wednesday</label>
+                                    [(ngModel)]="state.weekly.WED" [ngClass]="options.formCheckboxClass"> Mercredi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.THU" [ngClass]="options.formCheckboxClass"> Thursday</label>
+                                    [(ngModel)]="state.weekly.THU" [ngClass]="options.formCheckboxClass"> Jeudi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.FRI" [ngClass]="options.formCheckboxClass"> Friday</label>
+                                    [(ngModel)]="state.weekly.FRI" [ngClass]="options.formCheckboxClass"> Vendredi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.SAT" [ngClass]="options.formCheckboxClass"> Saturday</label>
+                                    [(ngModel)]="state.weekly.SAT" [ngClass]="options.formCheckboxClass"> Samedi</label>
                             </div>
                             <div class="col-sm-6">
                                 <label class="advanced-cron-editor-label"><input type="checkbox" [disabled]="disabled || activeTab !== 'weekly'" (change)="regenerateCron()"
-                                    [(ngModel)]="state.weekly.SUN" [ngClass]="options.formCheckboxClass"> Sunday</label>
+                                    [(ngModel)]="state.weekly.SUN" [ngClass]="options.formCheckboxClass"> Dimanche</label>
                             </div>
                         </div>
                         <div class="row">
@@ -180,13 +180,13 @@
                             <option *ngFor="let monthDaysWithLast of selectOptions.monthDaysWithLasts" [ngValue]="monthDaysWithLast">
                                 {{monthDayDisplay(monthDaysWithLast)}}
                             </option>
-                        </select> of every
+                        </select> de chaque
                         <select class="months-small" [disabled]="disabled || activeTab !== 'monthly' || state.monthly.subTab !== 'specificDay'"
                             (change)="regenerateCron()" [(ngModel)]="state.monthly.specificDay.months" [ngClass]="options.formSelectClass">
                             <option *ngFor="let month of selectOptions.months" [ngValue]="month">
                                 {{month}}
                             </option>
-                        </select> month(s) at
+                        </select> mois(s) à
                         <cron-time-picker [disabled]="disabled || activeTab !== 'monthly' || state.monthly.subTab !== 'specificDay'"
                             (change)="regenerateCron()" [(time)]="state.monthly.specificDay" [selectClass]="options.formSelectClass"
                             [use24HourTime]="options.use24HourTime" [hideSeconds]="options.hideSeconds">
